# grainlegumes-pino-airflow

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  environment-dev.yml  environment.yml  print_tree.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: quality.yml
data_generation/comsol/: template_brinkman_tensor.mph
data_generation/matlab/: V1_batch_run.m  batch_run.m  build_batch_dataset.py  merge_batch_cases.py  single_run.m  split_batch_to_cases.py
data_generation/matlab/functions/core/: V1_gen_permeability.m  V1_run_comsol_case.m  V1_sample_parameters.m  gen_material_fields.m  gen_simulation_inputs.m  run_comsol_case.m  sample_parameters.m  visualize_case.m
data_generation/matlab/functions/test/: V1_test_generate_permability_fields.m  test_gen_field.m  test_gen_simulation_inputs.m  test_run_comsol_case.m  test_visualize_case.m
model_training/notebooks/: compute_artifacts_all_models.py  eda.ipynb  eval.ipynb  eval_comparison_models.ipynb  eval_single_model.ipynb  training_pipeline.ipynb
model_training/src/: __init__.py
model_training/src/analysis/: analysis_artifacts.py  analysis_build_artifacts.py  analysis_interference.py
model_training/src/analysis/evaluation/: __init__.py  evaluation_dataframe.py  evaluation_panel.py
model_training/src/analysis/evaluation/evaluation_plot/: __init__.py  evaluation_plot_architecture_sensitivity.py  evaluation_plot_error_decomposition.py  evaluation_plot_global_error_analysis.py  evaluation_plot_outlier_analysis.py  evaluation_plot_overview_scoreboard.py  evaluation_plot_parameter_sensitivity.py  evaluation_plot_physical_consistency.py  evaluation_plot_sample_viewer.py  evaluation_plot_spectral_analysis.py
model_training/src/common/: __init__.py  common_paths.py
model_training/src/common/paths/: __init__.py  resolver.py
model_training/src/dataset/: __init__.py  dataset_base.py  dataset_simulation.py
model_training/src/dataset/dataset_module/: __init__.py  dataset_module_flow.py
model_training/src/datasets/: __init__.py  dataset_base.py  dataset_simulation.py
model_training/src/datasets/dataset_modules/: __init__.py  dataset_module_flow.py
model_training/src/domain/: __init__.py  domain_field_sets.py  domain_fields.py  domain_permeability.py
model_training/src/eda/: __init__.py  eda_dataframe.py
model_training/src/eda/eda_plot/: __init__.py  eda_plot_case_statistics.py  eda_plot_spectral_analysis.py
model_training/src/schema/: schema_fields.py  schema_kappa.py  schema_training.py
model_training/src/util/: __init__.py  util_gpu_test.py  util_metrics.py  util_nb.py  util_plot.py  util_plot_components.py
model_training/training/: __init__.py  train_base.py  train_config.py  train_fno.py  train_pi_fno.py  train_pi_uno.py  train_uno.py
model_training/training/optuna/: __init__.py  optuna_fno.py  optuna_pi_fno.py  optuna_pi_uno.py  optuna_setup.py  optuna_uno.py
model_training/training/tools/: __init__.py  pino_brinkman_losses.py  pino_loss.py  pino_loss_physical.py  pino_loss_spectral.py  spectral_hook.py
model_training/training/tools/pino_loss/: pino_loss_sampling.py
scripts/: _docker_run.sh  container_run_auto.sh  docker_build.sh  docker_data_export.ps1  docker_data_import.ps1  docker_dev.sh  docker_job.sh  docker_run.sh  hpc_start_container_nGPU.sh  hpc_train_nodocker.sh
