[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grainlegumes-pino"
version = "0.1.0"
description = "Synthetic permeability generation and PINO training pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rino M. Albertin" }]

[tool.setuptools]
package-dir = { "" = "model_training" }

[tool.setuptools.packages.find]
where = ["model_training/src"]
include = ["src*"]

# ============================================================
# 🧹 Ruff Configuration
# ============================================================

[tool.ruff]
line-length = 150
target-version = "py311"
extend-exclude = [
  "venv", ".venv", "data", "outputs", "results", "build", "dist"
]

# ------------------------------------------------------------
# ✨ Ruff Formatter (PEP 8 / PEP 257 aligned)
# ------------------------------------------------------------
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ------------------------------------------------------------
# 🧹 Ruff Linter
# ------------------------------------------------------------
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # 🔧 Formatting conflicts
  "COM812",  # Trailing comma handled by formatter

  # 🧾 Docstring style (PEP 257 consistency)
  "D203",  # No blank line before class (conflicts with D211)
  "D212",  # Summary line position (conflicts with D213)

  # intentional ignores
  "ANN401",  # Typing Any
  "FBT001", "FBT002", "FBT003",  # Boolean positional arguments
  "PLR0913",  # Too many function arguments
  "N806", "N803",  # Variable naming conventions (scientific code)
  "EXE002",  # Missing executable permissions
  "T201",    # Print statements
  "ERA001",  # commented-out code disallowed
]
fixable = ["ALL"]

# ------------------------------------------------------------
# 🧠 Code complexity (McCabe)
# ------------------------------------------------------------
[tool.ruff.lint.mccabe]
max-complexity = 20

# ------------------------------------------------------------
# 🧱 Structural limits (Pylint-style)
# ------------------------------------------------------------
[tool.ruff.lint.pylint]
max-branches = 20
max-statements = 100
max-returns = 10


# ============================================================
# 🧮 Type Checking
# ============================================================

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
strict_optional = true

exclude = [
    "model_training/training/"
]

# ============================================================
# 📓 Jupyter / nbQA
# ============================================================

[tool.nbqa.config]
ruff = ["--fix", "--exit-zero"]
