[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grainlegumes-pino-airflow"
version = "0.1.0"
description = "Physics-informed neural-operator pipeline for steady 2D airflow through heterogeneous porous media, motivated by grain-legume drying applications."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rino M. Albertin" }]

[tool.setuptools]
package-dir = { "" = "model_training" }

[tool.setuptools.packages.find]
where = ["model_training/src"]
include = ["src*"]

# ============================================================
# 🧹 Ruff Configuration
# ============================================================

[tool.ruff]
line-length = 150
target-version = "py311"
extend-exclude = [
  "venv",
  ".venv",
  "mlenv",
  ".mypy_cache",
  ".ruff_cache",
  "logs",
  "data",
  "data_generation/data",
  "model_training/data",
  "outputs",
  "results",
  "build",
  "dist"
]

# ------------------------------------------------------------
# ✨ Ruff Formatter
# ------------------------------------------------------------
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ------------------------------------------------------------
# 🧹 Ruff Linter
# ------------------------------------------------------------
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # 🔧 Formatting conflicts
  "COM812",  # Trailing comma handled by formatter

  # 🧾 Docstring style conflicts
  "D203",  # Conflicts with D211
  "D212",  # Conflicts with D213

  # 📦 Current package structure
  "INP001",  # Allow implicit namespace-style layout in current src setup

  # 🔬 Scientific / research code conventions
  "ANN401",  # Allow Any
  "FBT001", "FBT002", "FBT003",  # Allow boolean arguments
  "PLR0913",  # Allow many function arguments
  "N806", "N803",  # Allow scientific variable names
  "EXE002",  # Ignore executable-bit mismatch
  "T201",  # Allow print statements
  "ERA001",  # Allow commented-out code during research cleanup
]
fixable = ["ALL"]

# ------------------------------------------------------------
# 🧠 Code complexity
# ------------------------------------------------------------
[tool.ruff.lint.mccabe]
max-complexity = 20

# ------------------------------------------------------------
# 🧱 Structural limits
# ------------------------------------------------------------
[tool.ruff.lint.pylint]
max-branches = 20
max-statements = 100
max-returns = 10

# ============================================================
# 🧮 Type Checking
# ============================================================

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
strict_optional = true

exclude = [
  "model_training/training/",
  "logs/",
  "data/",
  "data_generation/data/",
  "model_training/data/",
]

# ============================================================
# 📓 Jupyter / nbQA
# ============================================================

[tool.nbqa.config]
ruff = ["--fix", "--exit-zero"]